moved to N-tier architecture

--- a/online-shop/online-shop/online-shop.csproj
+++ b/online-shop/online-shop/online-shop.csproj
@@ -18,16 +18,23 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Data\" />
-    <None Remove="Migrations\" />
     <None Remove="Views\Category\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Migrations\" />
     <Folder Include="Views\Category\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\online-shop.DataAccess\online-shop.DataAccess.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\online-shop.Model\online-shop.Model.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\online-shop.Utility\online-shop.Utility.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
