--- a/online-shop/online-shop.DataAccess/online-shop.DataAccess.csproj
+++ b/online-shop/online-shop.DataAccess/online-shop.DataAccess.csproj
@@ -8,27 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\" />
-    <None Remove="Migrations\" />
-    <None Remove="Repository\" />
-    <None Remove="Repository\IRepository\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Migrations\" />
-    <Folder Include="Repository\" />
-    <Folder Include="Repository\IRepository\" />
-  </ItemGroup>
-  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\online-shop.Model\online-shop.Model.csproj" />
     <ProjectReference Include="..\online-shop.Utility\online-shop.Utility.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Repository\" />
+    <None Remove="Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repository\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 </Project>
